<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/placeholder"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="9dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/light_grey_circle" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="27dp"
            android:background="@drawable/ic_landscape_white" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/placeholder"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/placeholder"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/primaryText"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Прогулка c Дон Кихотом" />

        <TextView
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/placeholder"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/placeholder"
            android:layout_toStartOf="@id/location"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"
            tools:text="Tez Tour" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/placeholder"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:singleLine="true"
            android:textColor="@color/secondaryText"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="Барселона" />

    </RelativeLayout>

    <View
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:background="@color/lightHintText"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <TextView
        android:id="@+id/personal_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:singleLine="true"
        android:maxLines="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textColor="@color/zighterPrimary"
        android:text="@string/personal_recommendation"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/layout_map"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="65dp">

            <ImageView
                android:background="@drawable/ic_map_black"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/price_map"
                android:textColor="@color/secondaryText"
                android:textSize="22sp"
                tools:text="200 \u20BD"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/map"
                android:textColor="@color/hintText"
                android:textSize="12sp"
                android:gravity="bottom"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_media"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="65dp">

            <ImageView
                android:background="@drawable/ic_media_black"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/price_media"
                android:textColor="@color/secondaryText"
                android:textSize="22sp"
                tools:text="200 \u20BD"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/map_and_media"
                android:textColor="@color/hintText"
                android:textSize="12sp"
                android:gravity="bottom"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_guide"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="65dp">

            <ImageView
                android:background="@drawable/ic_guide_black"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/price_guide"
                android:textColor="@color/secondaryText"
                android:textSize="22sp"
                tools:text="200 \u20BD"
                android:textStyle="bold"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:text="@string/guide"
                android:textColor="@color/hintText"
                android:textSize="12sp"
                android:gravity="bottom"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>